websockets - revert back to using original views
- create proto methods to send over websocket