@@ -4,7 +4,8 @@
  import mage.components.table.TableModelWithTooltip;
  import mage.components.table.TimeAgoTableCellRenderer;
  import mage.remote.Session;
- import mage.ws.v1.view.ViewProto;
+ import mage.view.TableView;
+ import mage.view.UserView;
  import org.apache.log4j.Logger;
 
  import javax.swing.*;
@@ -15,6 +16,7 @@
  import java.util.*;
  import java.util.concurrent.CancellationException;
  import java.util.concurrent.ExecutionException;
+ import java.util.stream.Collectors;
 
  import static javax.swing.JTable.AUTO_RESIZE_NEXT_COLUMN;
  import static javax.swing.JTable.AUTO_RESIZE_OFF;
@@ -50,14 +52,14 @@
          this.tblTables.getColumnModel().getColumn(TableTableModel.COLUMN_CREATED).setCellRenderer(TimeAgoTableCellRenderer.getInstance());
      }
 
-     public void update(List<ViewProto.UserView> users) {
+     public void update(List<UserView> users) {
          int row = this.tblUsers.getSelectedRow();
          tableUserModel.loadData(users);
          this.tblUsers.repaint();
          this.tblUsers.getSelectionModel().setSelectionInterval(row, row);
      }
 
-     public void update(Collection<ViewProto.TableView> tables) {
+     public void update(Collection<TableView> tables) {
          int row = this.tblTables.getSelectedRow();
          tableTableModel.loadData(tables);
          this.tblTables.repaint();
@@ -378,8 +380,8 @@
      private void btnRemoveTableActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btnRemoveTableActionPerformed
          int row = this.tblTables.convertRowIndexToModel(tblTables.getSelectedRow());
          if (row >= 0) {
-             ViewProto.TableView tableView = this.tableTableModel.getTableView(row);
-             ConsoleFrame.getSession().removeTable(UUID.fromString(tableView.getTableId()));
+             TableView tableView = this.tableTableModel.getTableView(row);
+             ConsoleFrame.getSession().removeTable(tableView.getTableId());
          }
      }//GEN-LAST:event_btnRemoveTableActionPerformed
 
@@ -421,12 +423,12 @@
      public static final int POS_CLIENT_VERSION = 8;
 
      private final String[] columnNames = new String[]{"User Name", "Host", "Time Connected", "Last activity", "SessionId", "Gameinfo", "User state", "Chat mute", "Client Version"};
-     private ViewProto.UserView[] users = new ViewProto.UserView[0];
+     private UserView[] users = new UserView[0];
      private static final DateFormat formatterTime = new SimpleDateFormat("HH:mm:ss");
      private static final DateFormat formatterTimeStamp = new SimpleDateFormat("yy-M-dd HH:mm:ss");
 
-     public void loadData(List<ViewProto.UserView> users) {
-         this.users = users.toArray(new ViewProto.UserView[0]);
+     public void loadData(List<UserView> users) {
+         this.users = users.toArray(new UserView[0]);
          this.fireTableDataChanged();
      }
 
@@ -442,30 +444,23 @@
 
      @Override
      public Object getValueAt(int arg0, int arg1) {
-         switch (arg1) {
-             case POS_USER_NAME:
-                 return users[arg0].getUserName();
-             case POS_HOST:
-                 return users[arg0].getHost();
-             case POS_TIME_CONNECTED:
-                 return formatterTime.format(new Date(users[arg0].getTimeConnectedInMillis()));
-             case POS_LAST_ACTIVITY:
-                 return formatterTime.format(new Date(users[arg0].getLastActivityInMillis()));
-             case POS_SESSION_ID:
-                 return users[arg0].getSessionId();
-             case POS_GAME_INFO:
-                 return users[arg0].getGameInfo();
-             case POS_USER_STATE:
-                 return users[arg0].getUserState();
-             case POS_CHAT_MUTE:
-                 if (users[arg0].getMuteChatUntilInMillis() == 0) {
-                     return "";
+         return switch (arg1) {
+             case POS_USER_NAME -> users[arg0].getUserName();
+             case POS_HOST -> users[arg0].getHost();
+             case POS_TIME_CONNECTED -> formatterTime.format(users[arg0].getTimeConnected());
+             case POS_LAST_ACTIVITY -> formatterTime.format(users[arg0].getLastActivity());
+             case POS_SESSION_ID -> users[arg0].getSessionId();
+             case POS_GAME_INFO -> users[arg0].getGameInfo();
+             case POS_USER_STATE -> users[arg0].getUserState();
+             case POS_CHAT_MUTE -> {
+                 if (users[arg0].getMuteChatUntil() == null) {
+                     yield "";
                  }
-                 return formatterTimeStamp.format(new Date(users[arg0].getMuteChatUntilInMillis()));
-             case POS_CLIENT_VERSION:
-                 return users[arg0].getClientVersion();
-         }
-         return "";
+                 yield formatterTimeStamp.format(users[arg0].getMuteChatUntil());
+             }
+             case POS_CLIENT_VERSION -> users[arg0].getClientVersion();
+             default -> "";
+         };
      }
 
      @Override
@@ -491,10 +486,10 @@
      protected static final int COLUMN_CREATED = 4;
 
      private final String[] columnNames = new String[]{"Table name", "Players", "Game type", "Deck type", "Created", "Status", "Games"};
-     private ViewProto.TableView[] tables = new ViewProto.TableView[0];
+     private TableView[] tables = new TableView[0];
 
-     public void loadData(Collection<ViewProto.TableView> tables) {
-         this.tables = tables.toArray(new ViewProto.TableView[0]);
+     public void loadData(Collection<TableView> tables) {
+         this.tables = tables.toArray(new TableView[0]);
          this.fireTableDataChanged();
      }
 
@@ -520,17 +515,17 @@
              case 3:
                  return tables[arg0].getDeckType();
              case COLUMN_CREATED:
-                 return new Date(tables[arg0].getCreateTimeMillis());
+                 return tables[arg0].getCreateTime();
              case 5:
                  return tables[arg0].getTableStateText();
              case 6:{
-                 if (tables[arg0].getGamesList().isEmpty()) {
+                 if (tables[arg0].getGames().isEmpty()) {
                      return "NO GAMES";
-                 } else if (tables[arg0].getGamesList().size() == 1) {
-                     return tables[arg0].getGamesList().get(0);
+                 } else if (tables[arg0].getGames().size() == 1) {
+                     return tables[arg0].getGames().getFirst().toString();
                  } else {
-                     return String.format("%d games:", tables[arg0].getGamesList().size())
-                             + "<br>" + String.join("<br>", tables[arg0].getGamesList());
+                     return String.format("%d games:", tables[arg0].getGames().size())
+                             + "<br>" + tables[arg0].getGames().stream().map(UUID::toString).collect(Collectors.joining("<br>"));
                  }
              }
          }
@@ -557,7 +552,7 @@
          }
      }
 
-     public ViewProto.TableView getTableView(int row) {
+     public TableView getTableView(int row) {
          if (row >= 0 && row <= this.tables.length - 1) {
              return this.tables[row];
          } else {
@@ -572,11 +567,11 @@
      }
  }
 
- class UpdateUsersTask extends SwingWorker<Void, List<ViewProto.UserView>> {
+ class UpdateUsersTask extends SwingWorker<Void, List<UserView>> {
 
      private final Session session;
      private final ConsolePanel panel;
-     private List<ViewProto.UserView> previousUsers;
+     private List<UserView> previousUsers;
 
      private static final Logger logger = Logger.getLogger(UpdateUsersTask.class);
      Map<String, String> peopleIps = new HashMap<>();
@@ -589,10 +584,10 @@
      @Override
      protected Void doInBackground() throws Exception {
          while (!isCancelled()) {
-             List<ViewProto.UserView> users = session.getUsers();
-             if (!panel.getjUserName().getText().isEmpty()) {
-                 List<ViewProto.UserView> users2 = new ArrayList<>();
-                 for (ViewProto.UserView user : users) {
+             List<UserView> users = session.getUsers();
+             if (!panel.getjUserName().getText().equals("")) {
+                 List<UserView> users2 = new ArrayList<>();
+                 for (UserView user : users) {
                      if (user.getUserName().toUpperCase(Locale.ENGLISH).matches(".*" + panel.getjUserName().getText().toUpperCase(Locale.ENGLISH) + ".*")) {
                          users2.add(user);
                      }
@@ -608,12 +603,12 @@
          return null;
      }
 
-     private void checkUserListChanged(List<ViewProto.UserView> usersToCheck) {
+     private void checkUserListChanged(List<UserView> usersToCheck) {
          if (previousUsers == null || usersToCheck == null) {
              return;
          }
 
-         for (ViewProto.UserView u1 : previousUsers) {
+         for (UserView u1 : previousUsers) {
              String s = u1.getUserName() + ',' + u1.getHost();
              if (peopleIps.get(s) == null) {
                  logger.warn("Found new user: " + u1.getUserName() + ',' + u1.getHost());
@@ -621,7 +616,7 @@
              }
          }
 
-         for (ViewProto.UserView u1 : usersToCheck) {
+         for (UserView u1 : usersToCheck) {
              String s = u1.getUserName() + ',' + u1.getHost();
              if (peopleIps.get(s) == null) {
                  logger.warn("Found new user: " + u1.getUserName() + ',' + u1.getHost());
@@ -631,7 +626,7 @@
      }
 
      @Override
-     protected void process(List<List<ViewProto.UserView>> view) {
+     protected void process(List<List<UserView>> view) {
          panel.update(view.get(0));
      }
 
@@ -643,16 +638,14 @@
      protected void done() {
          try {
              get();
-         } catch (InterruptedException ex) {
+         } catch (InterruptedException | ExecutionException ex) {
              logger.fatal("Update Users Task error", ex);
-         } catch (ExecutionException ex) {
-             logger.fatal("Update Users Task error", ex);
-         } catch (CancellationException ex) {
+         } catch (CancellationException ignored) {
          }
      }
  }
 
- class UpdateTablesTask extends SwingWorker<Void, Collection<ViewProto.TableView>> {
+ class UpdateTablesTask extends SwingWorker<Void, Collection<TableView>> {
 
      private final Session session;
      private final UUID roomId;
@@ -669,10 +662,10 @@
      @Override
      protected Void doInBackground() throws Exception {
          while (!isCancelled()) {
-             Collection<ViewProto.TableView> tableViews = session.getTables(roomId);
+             Collection<TableView> tableViews = session.getTables(roomId);
              if (!panel.getjUserName().getText().isEmpty()) {
-                 Collection<ViewProto.TableView> tableViews2 = new ArrayList<>();
-                 for (ViewProto.TableView table : tableViews) {
+                 Collection<TableView> tableViews2 = new ArrayList<>();
+                 for (TableView table : tableViews) {
                      if (table.getControllerName().toUpperCase(Locale.ENGLISH).matches(".*" + panel.getjUserName().getText().toUpperCase(Locale.ENGLISH) + ".*")) {
                          tableViews2.add(table);
                      }
@@ -687,7 +680,7 @@
      }
 
      @Override
-     protected void process(List<Collection<ViewProto.TableView>> view) {
+     protected void process(List<Collection<TableView>> view) {
          panel.update(view.get(0));
      }
 
